# HighROV_firmware

./: .gitignore  CMakeLists.txt  Config.h  Crc.h  Data.cpp  Data.h  Debug.cpp  Debug.h  DepthSensor.cpp  HighROV.cpp  HighROV.h  IMUSensor.cpp  IMUSensor.h  Logger.cpp  Logger.h  Networking.cpp  Networking.h  PWMController.cpp  README.md  Thrusters.cpp  Thrusters.h  rov_firmware.ino  upload.sh
